# stock-volatility-prediction

./: LICENSE  README.md  processed_dataset.csv  pyproject.toml  sentiment_score_press.ipynb
config/: catalog.yaml
data/processed/: final_data.csv  final_data_w_garch.csv  final_data_w_garch_lstm.csv
data/raw/: news_data.csv  numerical_data.csv  press_data.csv  twitter_data.csv
notebooks/: LSTM_SVR_GARCH.ipynb  data_processing.ipynb  median_sentiment_scores.csv  sentiment_score_news.ipynb  sentiment_score_press.ipynb  testing_garch.ipynb
src/: main.py
src/data/: data_stitching.py  num_data_loader.py  text_data_loader.py  text_data_transformation.py
src/modelling/: garch.py  lstm.py  stacking.py  svr.py
src/utils/: general_util.py
