[tool.poetry]
name = "stock-volatility-prediction"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
spacy = "^3.7.4"
nltk = "^3.8.1"
scikit-learn = "^1.4.1.post1"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
pyyaml = "^6.0.1"
ipykernel = "^6.29.4"
tqdm = "^4.66.2"
arch = "^6.3.0"
statsmodels = "^0.14.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
optuna = "^3.6.1"
iprogress = "^0.4"
tensorflow = "^2.16.1"
transformers = "^4.40.1"
torch = "^2.3.0"
loguru = "^0.7.2"
lightgbm = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
